<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToqAN</string>
    <string name="service_name">ToqAN</string>
    <string name="action_settings">Settings</string>

    <!-- Status -->
    <string name="status_connecting">Connecting…</string>
    <string name="status_disconnected">Disconnected from Toq app service</string>
    <string name="status_installation_successful">Deck of cards installed successfully</string>
    <string name="status_installation_denied">Deck of cards installation denied</string>
    <string name="status_connected">Connected to Toq app service</string>
    <string name="status_uninstalled">Deck of cards uninstalled</string>
    <string name="intent_toq_watch_connected">Toq watch is connected to Toq app</string>
    <string name="intent_toq_watch_disconnected">Toq watch is disconnected from Toq app</string>

    <!-- Events -->
    <string name="event_card_open">"Card open: "</string>
    <string name="event_card_visible">"Card visible: "</string>
    <string name="event_card_invisible">"Card invisible: "</string>
    <string name="event_card_closed">"Card closed: "</string>
    <string name="event_menu_option_selected">"Menu option selected: "</string>

    <!-- Errors -->
    <string name="error_checking_status">Error checking if Toq watch is connected or deck of cards is installed</string>
    <string name="error_initialising_icons">Error occurred retrieving icons</string>
    <string name="error_initialising_card_images">Error occurred retrieving card images</string>
    <string name="error_installing_deck_of_cards">Error installing deck of cards applet</string>
    <string name="error_updating_deck_of_cards">Error updating deck of cards applet</string>
    <string name="error_uninstalling_deck_of_cards">Error uninstalling deck of cards applet</string>
    <string name="error_sending_notification">Error sending notification</string>

    <!-- Cards -->
    <string name="card_btn_delete">Delete</string>
    <string name="card_btn_respond">Respond</string>

    <!-- Notifications -->
    <string name="test_notification_title">Test notification</string>
    <string name="test_notification_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur at erat nec condimentum. Nam eget nisi vitae massa gravida commodo. Etiam luctus metus at turpis cursus molestie. Sed sagittis orci purus, et fermentum nisi pulvinar ultricies. Curabitur egestas nibh non porta finibus. Integer maximus, orci et efficitur gravida, leo eros egestas neque, commodo ultricies lorem odio id risus. Curabitur venenatis dolor id cursus hendrerit. Donec mattis et velit eu laoreet. Duis et dignissim massa. Pellentesque finibus elit quis pharetra faucibus. Vivamus hendrerit bibendum ex, a sagittis mi imperdiet id. Donec venenatis tempus ex, sit amet eleifend sem commodo a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas egestas erat vitae eleifend consequat. Maecenas accumsan elit arcu. Vivamus semper risus sed tincidunt sagittis. Integer cursus dui in arcu vehicula, non suscipit diam accumsan. Proin nulla est, pharetra et ante dignissim, ullamcorper convallis ligula. Phasellus laoreet leo elit, eget pretium leo fringilla gravida. Vestibulum vitae purus eget eros aliquam bibendum ut sit amet dui. Vivamus placerat auctor nisl ac eleifend. Fusce felis metus, mollis sit amet lacus sit amet, tempor consectetur ligula. Proin rutrum lobortis risus, quis facilisis urna tincidunt eu. Morbi ac gravida arcu, ut gravida sem. Suspendisse maximus in purus sit amet mollis. Suspendisse potenti.</string>
    <string name="open_settings_button">Settings</string>
    <string name="app_list_activity_name">App List</string>
    <string name="all_apps_checkbox">All</string>
    <string name="none_apps_checkbox">None</string>
    <string name="save_preferences_button">Save</string>
    <string name="action_apps">App List</string>
    <string name="action_stop">Stop and exit</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Clear All</string>
    <string name="app_list_description">Select the applications that will send notifications to your Smartwatch.</string>

    <!-- Steps -->


    <!-- Buttons -->
    <string name="steps">Steps</string>
    <string name="steps_install_deck_of_card_title">1. Install applet</string>
    <string name="steps_install_deck_of_card">Install ToqAN applet on your Smartwatch.</string>
    <string name="doc_install_button">Install</string>
    <string name="steps_permissions_title">2. Check notification permissions</string>
    <string name="steps_permissions">Give ToqAN permissions to monitor notificaions. If you are not recieving notifications properly, please take away and give permissions again. If it does not solve the problems check the notification app list.</string>
    <string name="doc_check_permissions">Permissions</string>
    <string name="steps_optional">Optional</string>
    <string name="steps_connection_title">Check connection</string>
    <string name="steps_connection">Check your connection sending a notification to the Smartwatch. It will also update applet data.</string>
    <string name="check_connection_button">Connection</string>
    <string name="steps_duplicate_notifications_title">Duplicate notifications</string>
    <string name="steps_duplicate_notifications">If you don\'t want to recieve duplicate notifications, open Toq\'s default app and clear all app notifications.</string>
    <string name="steps_uninstall_deck_of_card_title">Uninstall applet</string>
    <string name="steps_uninstall_deck_of_card">If you are not going to use this app anymore, uninstall the applet clicking the button below and then click on "stop and exit" in the action bar.</string>
    <string name="doc_uninstall_button">Uninstall</string>
    <string name="action_about">About Us</string>
    <string name="section_main" translatable="false">ToqAN</string>
    <string name="section_notifications">Notification WhiteList</string>
    <string name="section_applet">Applet WhiteList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="applet_app_list_description">ToqAN applet will show your Android device current notifications. Select the app that will be able to show you the notifications.</string>
    <string name="applet_all">Show all notificatioins</string>
    <string name="applet_same_as_notifications">Use the same as in Notification WhiteList</string>
    <string name="action_update">Update Order</string>
    <string name="notification_service_null">Notification service is not initialized. Please check Permissions.</string>

</resources>
